fix needle lifted on mobile

--- a/app/karaoke/components/pickup/style.scss
+++ b/app/karaoke/components/pickup/style.scss
@@ -274,6 +274,10 @@
 
 .needle.lifted {
   top: -2.5em;
+
+  @media screen and (max-width: 1024px) {
+    top: -2em;
+  }
 }
 
 @keyframes spinning {
